<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SoundLooper</groupId>
  <artifactId>SoundLooper</artifactId>
  <version>2.1.1</version>
  <properties>
		<jdk.version>1.8</jdk.version>
  </properties>
  <dependencies>
  	<dependency>
  		<groupId>com.h2database</groupId>
  		<artifactId>h2</artifactId>
  		<version>1.3.175</version>
  	</dependency>
  	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-lang3</artifactId>
	    <version>3.4</version>
	</dependency>
	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-api</artifactId>
  		<version>2.4.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.logging.log4j</groupId>
  		<artifactId>log4j-core</artifactId>
  		<version>2.4.1</version>
  	</dependency>
  	<dependency>
        <groupId>nativefmod</groupId>
        <artifactId>NativeFmodEx</artifactId>
        <version>1.5.0</version>
    </dependency>
	<dependency>
	    <groupId>org.kohsuke</groupId>
	    <artifactId>github-api</artifactId>
	    <version>1.82</version>
	</dependency>
    <dependency>
     	<groupId>nativefmod</groupId>
     	<artifactId>NativeFmodEx-win</artifactId>
     	<version>1.5.0</version>
     </dependency>
     <dependency>
     	<groupId>nativefmod</groupId>
     	<artifactId>NativeFmodEx-win64</artifactId>
     	<version>1.5.0</version>
	 </dependency>
	 <dependency>
     	<groupId>nativefmod</groupId>
     	<artifactId>NativeFmodEx-linux</artifactId>
     	<version>1.5.0</version>
     </dependency>
     <dependency>
     	<groupId>nativefmod</groupId>
     	<artifactId>NativeFmodEx-linux64</artifactId>
     	<version>1.5.0</version>
     </dependency>
     <dependency>
  		<groupId>commons-io</groupId>
  		<artifactId>commons-io</artifactId>
  		<version>2.5</version>
  	</dependency>
	<dependency>
	    <groupId>org.pegdown</groupId>
	    <artifactId>pegdown</artifactId>
	    <version>1.6.0</version>
	</dependency>
  </dependencies>

  <build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.soundlooper.system.SoundLooper</mainClass>
							<classpathPrefix>dependency-jars/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
		       	<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-antrun-plugin</artifactId>
		        <version>1.8</version>
		        <executions>
		          <execution>
		            <phase>package</phase>
		            <configuration>
		              <tasks>
		                <property name="author" value="Alexandre NEDJARI"/>
		              	<property name="application.name" value="${project.name}"/>
		                <property name="version" value="${project.version}"/>
		                <echo message="Version: ${project.version}"/>
		                <ant antfile="build.xml" dir="install" target="deploy" inheritAll="true" inheritRefs="true"/>
		              </tasks>
		            </configuration>
		            <goals>
		              <goal>run</goal>
		            </goals>
		          </execution>
		        </executions>
      		</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.5.1</version>
				<executions>
				  <execution>
					<id>copy-dependencies</id>
					<phase>clean</phase>
					<goals>
						<goal>copy-dependencies</goal>
					</goals>
					<configuration>
						<includeGroupIds/>
						<outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
					</configuration>
				  </execution>
				 </executions>
			  </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
	        </plugin>
		</plugins>
 
  </build>
</project>